--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <ol type="i">
        <li>Dance</li>
        <li>Watching crime documentries </li>
-       <li>Exploring with my <a href="https://www.instagram.com/dodo_the_eski_boi/">dog</a></li>
+       <li>Exploring with my <a href="https://www.instagram.com/dodo_the_eski_boi/" target="_blank">dog</a></li>
        <li>Reading</li>
    </ol>  
    <hr>
