--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h2>Contact:</h2>
   <p>Unit 101, 2480 Dundas street West</p> 
   <p>4376788262</p> 
   <!--<p><a href="mailto:myemail@gmail.com">Email</a></p>-->
-<hr size="4" noshade>
+<hr>
 <h3>Send a Message:</h3>
   <form action="mailto:pallupalspal@gmail.com" method="post" enctype="text/plain">
       <label>First Name:</label>
