--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>My Journey</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <table cellspacing="20"> 
         <tr>
-    <td><img src="images/Pallavi.png" style="width90px;height:90px" alt="Dr.Pallavi Krishna Photo"></td>
-    <td><h1><a href="images/Pallavi.png" target="_blank" download>Dr.Pallavi Krishna</a></h1>
+    <td><img src="images/Pallavi.png" alt="Dr.Pallavi Krishna Photo"></td>
+    <td><h1>
+        <!--<a href="images/Pallavi.png" target="_blank" download> to download the file-->
+            Dr.Pallavi Krishna</a></h1>
     <p><em>Dentist trying to be a front end developer</em></p> </td></tr></table>
     <p>I am a dentist turned developer. I love dogs. I enjoy learning new things. I have tons of interests and the list keeps increasing everyday.</p>
-    <hr noshade>
+    <hr>
    <h3>Education</h3> 
    <ul type="square">
        <li>Bachelor of Dental Surgery at <strong><a href="http://rguhs.ac.in/" target="_blank">Rajiv Gandhi University</a></strong></li>
